{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 94,
  "lineage": "7d6c798d-bac4-8291-de08-a3bfa0b10dc6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3b3274b6c5d4aa",
            "arn": "arn:aws:ec2:us-east-1:156864767418:instance/i-0e6fb7edc085679dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6fb7edc085679dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0585e302042f8cbc0",
            "private_dns": "ip-10-0-1-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.140",
            "public_ip": "34.238.153.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c633a73aa5f7cd7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072b3f6d7966b97b1",
            "tags": {
              "Name": "webserver1-0"
            },
            "tags_all": {
              "Name": "webserver1-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04080f5f1ec3cf624"
            ]
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d3b3274b6c5d4aa",
            "arn": "arn:aws:ec2:us-east-1:156864767418:instance/i-0b55522340b639044",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b55522340b639044",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf2ac6cc1195dd43",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.68",
            "public_ip": "52.205.150.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071b0d1e9c390232a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072b3f6d7966b97b1",
            "tags": {
              "Name": "webserver1-1"
            },
            "tags_all": {
              "Name": "webserver1-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04080f5f1ec3cf624"
            ]
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:internet-gateway/igw-013bc468c4afdcc4a",
            "id": "igw-013bc468c4afdcc4a",
            "owner_id": "156864767418",
            "tags": {
              "Name": "ig"
            },
            "tags_all": {
              "Name": "ig"
            },
            "vpc_id": "vpc-0472621e876f401be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:loadbalancer/app/lb1/f1ab7bb4143fe454",
            "arn_suffix": "app/lb1/f1ab7bb4143fe454",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb1-1203571506.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:loadbalancer/app/lb1/f1ab7bb4143fe454",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04080f5f1ec3cf624"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072b3f6d7966b97b1"
              },
              {
                "subnet_id": "subnet-0cdad9121d01cfc86"
              }
            ],
            "subnets": [
              "subnet-072b3f6d7966b97b1",
              "subnet-0cdad9121d01cfc86"
            ],
            "vpc_id": "vpc-0472621e876f401be",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:listener/app/lb1/f1ab7bb4143fe454/214ddd1097fd9c5b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target/6aa0d85f8320d1db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:listener/app/lb1/f1ab7bb4143fe454/214ddd1097fd9c5b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:loadbalancer/app/lb1/f1ab7bb4143fe454",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.test",
            "aws_subnet.main",
            "aws_subnet.public",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target/6aa0d85f8320d1db",
            "arn_suffix": "targetgroup/alb-target/6aa0d85f8320d1db",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target/6aa0d85f8320d1db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0472621e876f401be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target/6aa0d85f8320d1db-20221115070209489400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target/6aa0d85f8320d1db",
            "target_id": "i-0e6fb7edc085679dc"
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_lb_target_group.test",
            "aws_subnet.main",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target/6aa0d85f8320d1db-20221115070209541800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:156864767418:targetgroup/alb-target/6aa0d85f8320d1db",
            "target_id": "i-0b55522340b639044"
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_lb_target_group.test",
            "aws_subnet.main",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:route-table/rtb-099c5b1d5158c81b5",
            "id": "rtb-099c5b1d5158c81b5",
            "owner_id": "156864767418",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013bc468c4afdcc4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0472621e876f401be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0600f8bff6a75b983",
            "route_table_id": "rtb-099c5b1d5158c81b5",
            "subnet_id": "subnet-072b3f6d7966b97b1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt1",
            "aws_subnet.main",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:security-group/sg-0e94ef87556812572",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e94ef87556812572",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "156864767418",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0472621e876f401be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:subnet/subnet-072b3f6d7966b97b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072b3f6d7966b97b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156864767418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0472621e876f401be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:subnet/subnet-0cdad9121d01cfc86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdad9121d01cfc86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156864767418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0472621e876f401be"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:156864767418:vpc/vpc-0472621e876f401be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa8c51bba3558b38",
            "default_route_table_id": "rtb-0ba14b3bf0a5877d2",
            "default_security_group_id": "sg-04080f5f1ec3cf624",
            "dhcp_options_id": "dopt-0e2ad1e3ea0ed6fda",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0472621e876f401be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba14b3bf0a5877d2",
            "owner_id": "156864767418",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    }
  ]
}